@@ -265,12 +265,14 @@ def killMonkey(class_, name, fallback, attr=None):
     method = getattr(class_, name, None)
     if isFiveMethod(method):
         original = getattr(class_, fallback, None)
-        if original is None:
+        if original is not None:
+            delattr(class_, fallback)
+        if original is None or isFiveMethod(original):
             try:
                 delattr(class_, name)
             except AttributeError:
                 pass
-        else:                
+        else:
             setattr(class_, name, original)
 
     if attr is not None:
